# inditrans

./: .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  inditrans.code-workspace  native
assets/: constants.json  test-cases.json
dart/: README.md  ffigen.yaml  pubspec.yaml
dart/android/: build.gradle  settings.gradle
dart/ios/: translit.podspec
dart/lib/: inditrans.dart
dart/linux/: CMakeLists.txt
dart/macos/: translit.podspec
dart/windows/: CMakeLists.txt
docs/: References.md  extended-latin.txt  unique.md
flutter/: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
flutter/android/: build.gradle  settings.gradle
flutter/assets/: inditrans.wasm  libinditrans.js  libinditrans.wasm  mjs  standalone  wasm
flutter/native/src/: CMakeLists.txt  build.bat  char_trie.h  exports.h  inditrans.cpp  inditrans.h  json-reader.h  json.h  script_constants.h  script_data.h  scripts-gen.h  scripts_gen.h  tamil-prefix.h  tamil_prefix.h  trie.h  type_defs.h  utf.h  utilities.h  wasi_fix.h
flutter/windows/: CMakeLists.txt
misc/: aksharamukha-proxy.py  customTranslations.txt  gen-from-am.ts  ref.txt
native/: CMakeLists.txt  scripts-gen.h
nodejs/: .eslintignore  .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  README.md  jestconfig.json  package.json  tsconfig.json
scripts/: analysis_options.yaml  build.sh  build_wasm.ps1  build_wasm.sh  bump-version.dart  bump_version.dart  generate-bindings.dart  generate-wasm-header.dart  generate_bindings.dart  generate_headers.dart  generate_script_data_header.dart  generate_test_data.dart  generate_wasm_header.dart  import_script.dart  options.json  prof.sh  prof_ts.sh  pubspec.yaml  run.sh  script_data.json  setup.sh  test.sh  testam.sh  tool.sh  transliterationTests.json  unique.json
test-files/: sanscript-tests.json  test-cases.json
tool/: build_wasm.ps1  bump_version.dart  generate_bindings.dart  generate_headers.dart  generate_test_data.dart  import_script.dart  pubspec.yaml  script_data.json  setup.ps1  setup.sh
ts/: LICENSE  package.json
wasm/: .clang-format
(+137 files in other folders)
